# ws_news

./: .gitignore  database.db  pyproject.toml
ws_news/: article.py  driver.py  helpers.py  main.py  news.py  types.py
ws_news/common/: classes.py  database.py
