[project]
name = "ws-news"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Fernandes",email = "arthur0139@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
